# Data-Science---Python

Mentoria_NLP/: Extração_texto.ipynb
Mentoria_NLP/.ipynb_checkpoints/: Manipular_tokens-checkpoint.ipynb
Mentoria_NLP/projeto_uv/: .gitignore  Extração_texto.ipynb  Prompt podcast V1 - Copia.ipynb  Prompt podcast V1.ipynb  Prompt receita V1.ipynb  README.md  app.py  debug_chunking.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
Mentoria_NLP/projeto_uv/Notebooks/: Comparacao_Whisper - podcast.ipynb  Comparacao_Whisper - receita.ipynb  Extração_texto.ipynb  Groq_LiteLLM_Test.ipynb  Groq_Whisper_Test.ipynb  Manipular_tokens.ipynb  Prompt podcast V1.ipynb  Prompt receita V1.ipynb  transcricao.txt  transcricao_youtube.txt
Mentoria_NLP/projeto_uv/pages/: 2_Receitas_Salvas.py
Mentoria_NLP/projeto_uv/src/: extrair_audio.py  models.py  utils_audio.py
Mentoria_NLP/projeto_uv/src/database/: mongo.py
Mentoria_NLP/projeto_uv/src/models/: __init__.py
Mentoria_NLP/projeto_uv/src/models/fluxo_gerador_receita/: estado.py  grafo.py  nos.py  transcricao.py  utils_prompt.py  youtube.py
Mentoria_NLP/projeto_uv/src/models/fluxo_gerador_receita/prompts/: sistema.jinja2  usuario.jinja2
Mentoria_NLP/projeto_uv/src/services/: salvar_receita.py
Mentoria_NLP/projeto_uv/src/utils/: extrair_audio.py
