[project]
name = "projeto-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "groq>=0.36.0",
    "langchain>=1.0.3",
    "openai-whisper>=20250625",
    "pandas>=2.3.3",
    "pydub>=0.25.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "whisper>=1.1.10",
    "youtube-transcript-api==0.6.2",
    "yt-dlp>=2025.10.22",
]
